[metadata]
name = organization
version = 1
description = Aplicação Django modelo para organizações públicas
long_description = file: README.rst
author = Allan Ramos
author_email = allan.charlys@gmail.com
url = https://github.com/allanrms/push.git
license = unlicense
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: unlicense
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: